<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#402196F3"
    tools:context=".Infomation">

    <ImageButton
        android:layout_gravity="right"
        android:background="@android:color/transparent"
        android:src="@drawable/check_information"
        android:id="@+id/conFirm_infor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Xác nhận"
        android:textColor="#f00000"
        android:textAlignment="center" />

    <de.hdodenhof.circleimageview.CircleImageView

        app:civ_border_width="1dp"
        android:layout_gravity="center"
        android:id="@+id/avatar_inofmation"
        android:layout_width="150dp"
        android:layout_height="150dp"/>






    <ScrollView
        android:id="@+id/infor_lists"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--Họ và tên-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/hoten"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/Name_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <!--//Giới tính-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:gravity="fill_vertical"
                    android:layout_weight="2"
                    android:text="@string/Gtinh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/male_radio"
                        android:text="@string/Nam"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <RadioButton
                        android:id="@+id/female_radio"
                        android:text="@string/Nu"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RadioGroup>

            </LinearLayout>
            <!--Sinh nhật-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Snhat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/birthDay_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <!--Số điện thoại-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Sodt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/numberPhone_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <!--Email-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/email_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Dchi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/address_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Truong"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/school_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Nganh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/branch_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Hqsv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/HQSV_edit"
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Nthamgia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/dayParticipation_edit"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:text="@string/Ldothamgia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/whyParticipation_edit"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>





        </LinearLayout>
    </ScrollView>



</LinearLayout>