<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Index">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6">




                <de.hdodenhof.circleimageview.CircleImageView
                    app:civ_border_width="1dp"
                    app:civ_border_color="#C0F503"
                    android:id="@+id/avata_conten_index"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />




            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HQSV"
                    android:textAllCaps="true"
                    android:textColor="#FFEB3B"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/name_index"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="Good afternoon, Quang"
                    android:textColor="#5DE00C"
                    android:textSize="13dp" />
            </LinearLayout>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="#00F00000"
                android:src="@drawable/chuon_icon" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--Họ và tên-->


        <ScrollView
            android:paddingTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:background="@drawable/bg_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/member_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/member" />

                            <TextView
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/tVien"
                                android:textColor="#000000"
                                android:textSize="10dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/khoc_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/status" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/kHoc" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/truong_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/friends" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/truong" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/hbong_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/hoc_bong" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/hBong" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/tnguyen_image"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/tinh_nguyen" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/tNguyen" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/dhoc_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/du_hoc" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/dHoc" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/love_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/love" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/love" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/choak_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/choak" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/choak" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginVertical="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/tChinh_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:src="@drawable/tchinh" />

                            <TextView
                                android:textColor="#000000"
                                android:gravity="center"
                                android:textSize="10dp"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/tChinh" />
                        </LinearLayout>


                    </LinearLayout>



                </LinearLayout>
                <TextView
                    android:textColor="#000000"
                    android:paddingTop="20dp"
                    android:textSize="20dp"
                    android:text="@string/hoatDong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <androidx.recyclerview.widget.RecyclerView

                    android:paddingTop="5dp"
                    android:id="@+id/RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView

                    android:textColor="#000000"
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duHoc"
                    android:textSize="20dp" />
                <!--ListView Duhoc-->
                <androidx.recyclerview.widget.RecyclerView
                    android:paddingTop="5dp"
                    android:id="@+id/RecyclerView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>



        </ScrollView>





        </LinearLayout>



    </LinearLayout>
</LinearLayout>